# gomc_rest_client

./: .gitignore  NOTICE  README.md  README_JP.md  pyproject.toml
.github/workflows/: test.yml  workflow.yml
gomc_rest_client/: __init__.py  client.py  exceptions.py
tests/: test_client.py  test_openapi_contract.py
tests/fixtures/: gomc-rest-v0.10.0-openapi.yaml  gomc-rest-v0.7.0-openapi.yaml  gomc-rest-v0.8.0-openapi.yaml  gomc-rest-v0.9.0-openapi.yaml  gomc-rest-v1.3.0-openapi.yaml  gomc-rest-v1.4.0-openapi.yaml
