[project]
name = "gomc-rest-client"
version = "0.5.0"
description = "Synchronous Python client for the gomc-rest API"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Moge800" },
]
keywords = ["plc", "mitsubishi", "mc-protocol", "gomc-rest"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/Moge800/gomc-rest"

[dependency-groups]
dev = [
  "PyYAML>=6.0,<7",
  "pytest>=8.3,<9",
  "ruff>=0.11.0,<0.12",
  "ty>=0.0.1a15",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gomc_rest_client"]

[tool.hatch.build.targets.wheel.force-include]
"gomc_rest_client/py.typed" = "gomc_rest_client/py.typed"

[tool.hatch.build.targets.sdist]
include = [
  "/gomc_rest_client",
  "/tests",
  "/README.md",
  "/LICENSE",
  "/pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ty.src]
include = ["gomc_rest_client", "tests"]
